--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,19 +1,3 @@
-- shell:
-  - [chsh -s $(which zsh), Making zsh the default shell]
-  -
-    command: read var && echo Your variable is $(which zsh)
-    stdin: true
-    stdout: true
-    description: Reading and printing variable
-  - 
-    command: git submodule update --init --recursive
-    description: Installing submodules
-    stdout: true
-  - 
-    command: chmod +x ~/.local/bin/*
-    description: Adding binary permissions... 
-    stdout: true
-    quiet: true
 
 - defaults:
     link:
@@ -61,9 +45,7 @@
     ~/.config/micro:
       path: dots/.config/micro
     ~/.config/nvim:
-      path: dots/.config/nvim
-    ~/.config/nvim-ks:
-      path: dots/.config/nvim-ks
+      path: dots/.config/kickstart.nvim
     ~/.config/tmux:
       path: dots/.config/tmux
     ~/.config/tms:
@@ -72,9 +54,13 @@
       path: dots/.config/awesome
     ~/.config/rofi:
       path: dots/.config/rofi
-    ~/.config/flameshot:
-      path: dots/.config/flameshot
     ~/.config/dunst:
       path: dots/.config/dunst
     ~/.config/picom:
       path: dots/.config/picom
+      
+- shell:
+  - 
+    command: git submodule update --init --recursive
+    description: Installing submodules
+    stdout: true
