--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,12 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot.git
 	ignore = dirty
-
 [submodule "dots/.config/kickstart.nvim"]
 	path = dots/.config/kickstart.nvim
 	url = git@github.com:FlynnOConnell/kickstart.nvim.git
+[submodule "obsidian"]
+	path = obsidian
+	url = git@github.com:FlynnOConnell/obsidian.git
+[submodule "ohmyzsh"]
+	path = ohmyzsh
+	url = https://github.com/ohmyzsh/ohmyzsh.git
