rm kickstart submode path in favor of .dotfiles/kickstart

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,6 +2,6 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot.git
 	ignore = dirty
-[submodule "dots/.config/kickstart.nvim"]
-	path = dots/.config/nvim
+[submodule "kickstart.nvim"]
+	path = kickstart.nvim
 	url = git@github.com:FlynnOConnell/kickstart.nvim.git
