update tmux, ideavimrc, zshrc, kickstart

--- a/dots/.config/tmux/tmux.conf
+++ b/dots/.config/tmux/tmux.conf
@@ -54,6 +54,9 @@ set -g @continuum-restore 'on'
 set -g @continuum-boot 'on'
 set -g @continuum-boot-options 'kitty,fullscreen'
 
+set -g @yank_selection 'clipboard'
+set -g @custom_copy_command 'xclip -selection clipboard'
+
 set -g status-right "#(tms sessions)"
 
 # set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
